# flying-robot

./: CMakeLists.txt  README.md
include/: logger.h  robot.h  robot.hpp  trajectory_planning.h  trajectory_planning.hpp
src/: compiling_error.txt  logger.cpp  main.cpp  robot.cpp  trajectory_planning.cpp
